style: fixed white space issues

--- a/styles/web.css
+++ b/styles/web.css
@@ -355,7 +355,7 @@ code {
     .blogs p {
         padding: 0 1rem;
     }
-    .blog-heading {
+    /* .blog-heading {
         padding: 0 1rem;
-    }
+    } */
 }
